--- a/index.html
+++ b/index.html
@@ -450,8 +450,8 @@
       <div class="blog__inner">
         <div class="blog__head">
           <h3 class="heading2">
-            <span class="title">BLOG</span>
-            <span class="sub-title">ブログ</span>
+            <span class="heading-en">BLOG</span>
+            <span class="heading-ja">ブログ</span>
           </h3>
         </div>
 
@@ -678,14 +678,15 @@
             </div>
           </div>
         </div>
+        <div class="seminar__button">
+          <a href="#" class="button-group1 button-primary">セミナー一覧へ</a>
+        </div>
       </div>
     </section>
     <!-- / seminar -->
 
     <!-- q and a -->
-     <section class="qa section">
-
-     </section>
+    <section class="qa section"></section>
     <!-- / q and a -->
   </body>
 </html>
