--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </div>
 
         <!-- blogコンテンツ部分 -->
-        <div class="blog__cards">
+        <div class="blog__cards content">
           <div class="blog__card blog-card">
             <div class="blog__image">
               <img
@@ -577,7 +577,7 @@
             <span class="heading-ja">セミナー</span>
           </h3>
         </div>
-        <div class="seminar__cards">
+        <div class="seminar__cards content">
           <div class="seminar__card">
             <div class="seminar-card">
               <div class="seminar-card__content">
