--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
       <div class="price__inner">
         <div class="price__head">
           <h3 class="heading2">
-            <span class="title">PRICE</span>
-            <span class="sub-title">料金</span>
+            <span class="heading-en">PRICE</span>
+            <span class="heading-ja">料金</span>
           </h3>
         </div>
         <div class="price__cards">
