--- a/index.html
+++ b/index.html
@@ -149,25 +149,42 @@
         </div>
         <div class="news__pagination">
           <div class="pagination">
-            <a href="#" class="arrow-icon"
-              ><img
-                src="./img/news-arrow-icon.svg"
-                width="13"
-                height="10"
-                alt="戻る"
-            /></a>
-            <a href="#">1</a>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
+            <a href="#" class="arrow-icon">
+              <svg width="16" height="12" viewBox="0 0 16 12" fill="none">
+                <path
+                  class="path-color"
+                  d="M15 1L8 6L15 11"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+                <path
+                  class="path-color"
+                  d="M9 1L2 6L9 11"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </a>
+            <a href="#" class="number">1</a>
+            <a href="#" class="number">2</a>
+            <a href="#" class="number">3</a>
+            <a href="#" class="number">4</a>
+            <a href="#" class="number">5</a>
             <a href="#" class="arrow-icon next"
-              ><img
-                src="./img/news-arrow-icon.svg"
-                width="13"
-                height="10"
-                alt="次へ"
-            /></a>
+              ><svg width="16" height="12" viewBox="0 0 16 12" fill="none">
+                <path
+                  class="path-color"
+                  d="M15 1L8 6L15 11"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                />
+                <path
+                  class="path-color"
+                  d="M9 1L2 6L9 11"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                /></svg
+            ></a>
           </div>
           <div class="news__button">
             <a href="#" class="button-group2 button-small">全てみる</a>
@@ -215,86 +232,6 @@
             <span class="heading-en">CASESTUDY</span>
             <span class="heading-ja">お客様の声</span>
           </h3>
-        </div>
-
-        <div class="case-study__slider">
-          <!-- Slider main container -->
-          <div class="swiper case-study__swiper">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper case-study__wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide case-study__slide">
-                <div class="case-study__card">
-                  <div class="case-study__image">
-                    <img
-                      src="./img/case-study1.jpg"
-                      width="320"
-                      height="214"
-                      alt=""
-                    />
-                  </div>
-                  <div class="case-study__text-box">
-                    <p class="case-study__text">
-                      在宅でも団結したチームワークに。
-                    </p>
-                    <p class="case-study__company">
-                      〇〇株式会社<span class="name">吉本様</span>
-                    </p>
-                    <p class="case-study__industry">情報通信業</p>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide case-study__slide">
-                <div class="case-study__card">
-                  <div class="case-study__image">
-                    <img
-                      src="./img/case-study2.jpg"
-                      width="320"
-                      height="214"
-                      alt=""
-                    />
-                  </div>
-                  <div class="case-study__text-box">
-                    <p class="case-study__text">
-                      1日2時間分の処理時間の削減に成功
-                    </p>
-                    <p class="case-study__company">
-                      〇〇株式会社<span class="name">竹内様</span>
-                    </p>
-                    <p class="case-study__industry">情報通信業</p>
-                  </div>
-                </div>
-              </div>
-              <div class="swiper-slide case-study__slide">
-                <div class="case-study__card">
-                  <div class="case-study__image">
-                    <img
-                      src="./img/case-study3.jpg"
-                      width="320"
-                      height="214"
-                      alt=""
-                    />
-                  </div>
-                  <div class="case-study__text-box">
-                    <p class="case-study__text">導入から1年で残業0へ。</p>
-                    <p class="case-study__company">
-                      〇〇株式会社<span class="name">三島様</span>
-                    </p>
-                    <p class="case-study__industry">情報通信業</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination case-study__pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev case-study__prev"></div>
-            <div class="swiper-button-next case-study__next"></div>
-          </div>
-        </div>
-        <div class="case-study__button">
-          <a href="#" class="button-group2 button-large">全てみる</a>
         </div>
       </div>
     </section>
