--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
             <span class="heading-ja">お客様の声</span>
           </h3>
         </div>
+        <div class="case-study__button">
+          <a href="#" class="button-group2 button-large">全てみる</a>
+        </div>
       </div>
     </section>
     <!-- / case study -->
@@ -246,7 +249,7 @@
             <span class="heading-ja">料金</span>
           </h3>
         </div>
-        <div class="price__cards">
+        <div class="price__cards content">
           <div class="price__card price-card">
             <div class="price-card--plan">
               <p class="plan__title">ライトプラン</p>
@@ -376,6 +379,13 @@
             <span class="heading-ja">会社概要</span>
           </h3>
         </div>
+        <nav class="company__tabs">
+          <ul>
+            <li class="company__tab active" data-tab="tab__content01">会社概要</li>
+            <li class="company__tab" data-tab="tab__content01">沿革</li>
+            <li class="company__tab" data-tab="tab__content01">認証取得</li>
+          </ul>
+        </nav>
       </div>
     </section>
     <!-- / company -->
@@ -633,7 +643,89 @@
     <!-- / seminar -->
 
     <!-- q and a -->
-    <section class="qa section"></section>
+    <section class="qa section">
+      <div class="qa__inner">
+        <div class="qa__head">
+          <h3 class="heading1">NEWS<span class="heading-bar"></span></h3>
+        </div>
+        <div class="qa__boxes content">
+          <details open class="qa__box qa-box js-details">
+            <summary class="qa-box__head js-summary">
+              <span class="qa-box__inner">
+                <span class="qa-box__head-icon">Q</span>
+                <span class="qa-box__head-text"
+                  >ここにテキストが入ります。</span
+                >
+                <span class="qa-box__button"></span>
+              </span>
+            </summary>
+            <div class="qa__body">
+              <div class="qa-box__a">
+                <p class="qa-box__a-text">
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                </p>
+              </div>
+            </div>
+          </details>
+          <details class="qa__box qa-box js-details">
+            <summary class="qa-box__head js-summary">
+              <span class="qa-box__inner">
+                <span class="qa-box__head-icon">Q</span>
+                <span class="qa-box__head-text"
+                  >ここにテキストが入ります。</span
+                >
+                <span class="qa-box__button"></span>
+              </span>
+            </summary>
+            <div class="qa__body">
+              <div class="qa-box__a">
+                <p class="qa-box__a-text">
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                </p>
+              </div>
+            </div>
+          </details>
+          <details class="qa__box qa-box js-details">
+            <summary class="qa-box__head js-summary">
+              <span class="qa-box__inner">
+                <span class="qa-box__head-icon">Q</span>
+                <span class="qa-box__head-text"
+                  >ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</span
+                >
+                <span class="qa-box__button"></span>
+              </span>
+            </summary>
+            <div class="qa__body">
+              <div class="qa-box__a">
+                <p class="qa-box__a-text">
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                </p>
+              </div>
+            </div>
+          </details>
+          <details class="qa__box qa-box js-details">
+            <summary class="qa-box__head js-summary">
+              <span class="qa-box__inner">
+                <span class="qa-box__head-icon">Q</span>
+                <span class="qa-box__head-text"
+                  >ここにテキストが入ります。</span
+                >
+                <span class="qa-box__button"></span>
+              </span>
+            </summary>
+            <div class="qa__body">
+              <div class="qa-box__a">
+                <p class="qa-box__a-text">
+                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                </p>
+              </div>
+            </div>
+          </details>
+        </div>
+      </div>
+    </section>
     <!-- / q and a -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./js/faq.js"></script>
   </body>
 </html>
