--- a/index.html
+++ b/index.html
@@ -900,6 +900,23 @@
       </div>
     </section>
     <!-- / q and a -->
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="footer__inner">
+        <div class="footer__access">
+          <div class="footer__logo">
+            <img
+              src="./img/footer-logo.png"
+              alt="e-tiga"
+              width="160"
+              height="40"
+            />
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- /footer -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
