--- a/index.html
+++ b/index.html
@@ -913,6 +913,44 @@
               height="40"
             />
           </div>
+          <div class="footer__address">
+            <p class="address">住所：東京都〇〇区〇〇　〇〇ビル4階</p>
+            <p class="phone__number">TEL：0000-00-0000</p>
+            <p class="phone__number">FAX：0000-00-0000</p>
+          </div>
+          <div class="footer__menu--box">
+            <nav class="footer__menu">
+              <a href="#" class="footer__menu--link">お問い合わせ</a>
+              <a href="#" class="footer__menu--link">プライバシーポリシー</a>
+              <a href="#" class="footer__menu--link">特定商取引法</a>
+            </nav>
+            <nav class="footer__sns">
+              <a href="#" class="footer__sns--link"
+                ><img
+                  src="./img/sns-logo.svg"
+                  alt="twitter"
+                  width="30"
+                  height="30"
+              /></a>
+              <a href="#" class="footer__sns--link"
+                ><img
+                  src="./img/sns-logo.svg"
+                  alt="twitter"
+                  width="30"
+                  height="30"
+              /></a>
+              <a href="#" class="footer__sns--link"
+                ><img
+                  src="./img/sns-logo.svg"
+                  alt="twitter"
+                  width="30"
+                  height="30"
+              /></a>
+            </nav>
+          </div>
+        </div>
+        <div class="footer__copyright">
+          Copyright © 2023 デイトラ All rights reserved.
         </div>
       </div>
     </footer>
